--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ GildedRoseRefactoringKata/fsharp-core/.idea
 GildedRoseRefactoringKata/fsharp-core/GildedRose/obj
 GildedRoseRefactoringKata/fsharp-core/GildedRose.ApprovalTests/obj
 GildedRoseRefactoringKata/fsharp-core/GildedRose.UnitTests/obj
+GildedRoseRefactoringKata/fsharp-core/GildedRose/bin
+GildedRoseRefactoringKata/fsharp-core/GildedRose.ApprovalTests/bin
