--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ GildedRoseRefactoringKata/fsharp-core/GildedRose.ApprovalTests/obj
 GildedRoseRefactoringKata/fsharp-core/GildedRose.UnitTests/obj
 GildedRoseRefactoringKata/fsharp-core/GildedRose/bin
 GildedRoseRefactoringKata/fsharp-core/GildedRose.ApprovalTests/bin
+.DS_Store
